# chaosgamemode

./: .gitignore  CRUSH_TUI_PROMPT.md  README.md  build-msi.ps1  chaosgamemode.ps1  dev-watch.ps1  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: release.yml
docs/: onboarding.md
packaging/wix/: chaosgamemode.wxs
tui-rs/: Cargo.toml  config.toml  theme.toml
tui-rs/.cargo/: config.toml
tui-rs/src/: app.rs  config.rs  doctor.rs  frames.rs  game_resolver.rs  hardware.rs  history.rs  hotkeys.rs  i18n.rs  main.rs  metrics.rs  overlay.rs  presentmon.rs  steam.rs  system.rs  theme.rs  ui.rs
tui-rs/src/ui/: components.rs  dashboard.rs  pages.rs  steam_panel.rs
